--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@ html, body{
 }   
 
 .title{
-  font-family: "Dela Gothic One", sans-serif;
+  font-family: "Dela Gothic One", sans-serif !important;
   font-weight: 400;
   font-style: normal;
 }
