--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,5 +17,30 @@ html, body{
   
 }
 .active{
-  border: 1px solid red;
+}
+*::-webkit-scrollbar {
+  width: 0.6rem;
+  height: 8px;
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #b0b0b0;
+}
+
+*::-webkit-scrollbar-track {
+  background: #f2f2f2;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #b0b0b0;
+  border-radius: 5px;
+}
+.buttonBase{
+  all: unset;
+  min-width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 10,
 }
