--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,9 @@ html, body{
   font-weight: 400;
   font-style: normal;
 }
-
+a{
+  text-decoration: none;
+}
 
 .slideButton, .product-title{
     font-family: "Playfair Display", serif;
